--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,47 @@
     }
 
 
+    .bg-vlix {
+        background: rgb(198,220,235);
+        background: linear-gradient(0deg, rgba(198,220,235,1) 0%, rgba(198,220,235,1) 30%, rgba(255,255,255,1) 75%, rgba(255,255,255,1) 100%);        
+    }
+
+    .op-drop-shadow {
+        box-shadow: 0px 0px 30px #838383;
+    }
+    #image-4090-897 {
+        flex-direction: unset;
+        max-width: 100%;
+        width: 800px;
+    }
+    
+    #image-43-98 {
+        max-width: 800px;
+        width: 100%;
+    }
+    #image-108-98 {
+        max-width: 950px;
+        width: 100%;
+    }
+    
+    .auto-resizable-iframe {
+        max-width: 420px;
+        margin: 0px auto;
+      }
+      
+      .auto-resizable-iframe > div {
+        position: relative;
+        padding-bottom: 75%;
+        height: 0px;
+      }
+      
+      .auto-resizable-iframe iframe {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+      }
 /* ---- reset ---- */ body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; } canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%; 
     background: rgb(0,119,179);
     background: radial-gradient(circle, #0099e6 0%, #0077b3 50%, rgba(0,34,51,1) 100%);
